fixed css cropped

--- a/warp/css/style.css
+++ b/warp/css/style.css
@@ -6863,10 +6863,12 @@ h6 {
   height: 300px;
   width: 400px;
   overflow: hidden;
+  object-fit: cover;
  }
  .crop img {
   height: auto;
   width: 400px;
+  object-fit: cover;
  }
 .portfolio .portfolio-gallery .item{
   padding: 50px 45px 55px 45px;
@@ -6887,6 +6889,7 @@ h6 {
 .portfolio .portfolio-gallery .item img{
   width:220px;
   height:220px;
+  object-fit: cover;
   text-align: center;
   display: block;
   margin-left: auto;
@@ -6935,5 +6938,20 @@ h6 {
   background-color: #ddd;
   border-radius: 5px;
 }
+
 .logo-img {
   filter: invert(1);}
+
+.cropped1 {
+    width: 200px; /* width of container */
+    height: 250px; /* height of container */
+    object-fit: cover;
+    border: 2px solid black;
+}
+.cropped2 {
+    width: 200px; /* width of container */
+    height: 200px; /* height of container */
+    object-fit: cover;
+    object-position: 20% 10%; /* try 20px 10px */ 
+    border: 5px solid pink;
+}
